[tool.poetry]
name = "fluidframe-test"
version = "0.1.0"
description = ""
authors = ["AswanthManoj <aswanthmanoj51@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^72.1.0"
cython = "^3.0.11"
markdown-it-py = "^3.0.0"
mdit-py-plugins = "^0.4.1"
starlette = "^0.38.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
beautifulsoup4 = "^4.12.3"
websockets = "^13.0"
itsdangerous = "^2.2.0"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core", "cython", "wheel", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fluidframe = "fluidframe_test.cli:main"

